tests/ui/parser/issues/issue-21146.rs
include!("auxiliary/issue-21146-inc.rs");
fn main() {}

//~? ERROR expected one of `!` or `::`, found `<eof>`
